<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TW Fun Lotto</string>
    <string name="app_version">1.6</string>
    <string name="welcomemenu_setting">Settings</string>
    <string name="welcomemenu_about">About</string>
    <string name="twlotto_version">Version</string>
    <string name="invoice_menu_refresh">Refresh</string>
    <string name="lotto_type_title">Lotto Type:</string>
    <string name="lotto_drawid_title">Draw:</string>
    <string name="info_updateing">Refreshing winning results...</string>
    <string name="latest_info">Winning results updated</string>
    <string name="loading">Refreshing... Please wait!</string>
    <string name="draw_no">Draw Id</string>
    <string name="match_string">Award check</string>
    <string name="search_string">History Search</string>
    <string name="draw_match">Award check</string>
    <string name="draw_period">第</string>
    <string name="draw_id">期</string>
    <string name="first_prize">First Prize</string>
    <string name="second_prize">Second Prize</string>
    <string name="third_prize">Third Prize</string>
    <string name="fourth_prize">Fourth Prize</string>
    <string name="fifth_prize">Fifth Prize</string>
    <string name="sixth_prize">Sixth Prize</string>
    <string name="seventh_prize">Seventh Prize</string>
    <string name="eighth_prize">Eighth Prize</string>
    <string name="ninth_prize">Ninth Prize</string>
    <string name="no_prize_won">No prize won</string>
    <string name="general_prize">General Prize</string>
    <string name="dollar">NTD</string>
    <string name="prize_won">Prize Won</string>
    <string name="select_error">More numbers needs to be selected</string>
    <string name="draw_id_error">No draw id entered</string>
    <string name="prize_title">Prize: </string>
    <string name="prize_condition">Award: </string>
    <string name="lotto_type">Lotto Type: </string>
    <string name="weililotto">威力彩 </string>
    <string name="biglotto">6/49大樂透 </string>
    <string name="lotto539">今彩539 </string>
    <string name="ticktacktoelotto">樂線九宮格 </string>
    <string name="star3">3星彩 </string>
    <string name="star4">4星彩</string>
    <string name="lotto38">38樂合彩</string>
    <string name="lotto49">49樂合彩 </string>
    <string name="lotto39">39樂合彩</string>
    <string name="string_confirm">OK</string>
    <string name="lotto_retrieve_error">Failed to retrieve Lotto winning info!</string>
    <string name="string_invalid_drawid">Invalid Draw ID</string>
    <string name="invalid_draw_number">Invalid Draw ID, \nPlease check</string>
    <string name="data_error">No matched result found</string>
    <string name="try_again">Check\nagain</string>
    <string name="match_start">Award\ncheck</string>
    <string name="match_restart">Other Lotto check</string>
    <string name="convert_check_drawannounce">開獎</string>
    <string name="convert_check_drawdate_slashmark">/</string>
    <string name="convert_check_drawcashdate">兌獎截止(註4)</string>
    <string name="convert_check_prizemoney">獎金總額</string>
    <string name="convert_check_prize">獎金</string>
    <string name="convert_check_singledraw">單注</string>
    <string name="convert_check_invoice_sep">、</string>
    <string name="convert_check_invoice_grandprize">特別獎</string>
    <string name="convert_check_search">查詢</string>
    <string name="convert_year">年</string>
    <string name="twlotto_search">Search</string>
    <string name="invoice_draw_match">Award check!!</string>
    <string name="invoice_winning_alert_dialog_ok">OK</string>
    <string name="invoice_winning_alert_dialog_cancel">Cancel</string>
    <string name="invoice_prize">Prize:</string>
    <string name="top_prize">Special award</string>
    <string name="grand_prize">Grand award</string>
    <string name="invoice_you_enter">You entered: </string>
    <string name="invoice_congrads_you_win">Congratulations, you have won: </string>
    <string name="invoice_congratulations_you_win">Congratulations on winning!! </string>
    <string name="invoice_win_last_3">Please enter the complete invoice numbers: </string>
    <string name="invoice_try_again">Sorry, no prize won</string>
    <string name="invoice_enter_last_3no">Please enter last 3 numbers of your invoice: </string>
    <string name="invoice_continue"></string>
    <string name="invoice_retrieve_error">Failed to retrieve Invoice winning info!</string>
    <string name="searching">Refreshing... Please wait!</string>
    <string name="about_dialog_title">About TW Fun Lotto</string>
    <string name="about_dialog_msg_lotto">For Lotto result, please visit Taiwan Lotto’s official website http://www.taiwanlottery.com.tw</string>
    <string name="about_dialog_msg_invoice">For Uniform-Invoice winning number please visit official site of Ministry of Finance http://www.etax.nat.gov.tw/wSite/lp?ctNode=10715</string>
    <string name="about_dialog_msg_res">We do not take responsibility for incorrect lotto/Uniform-Invoice winning results.</string>
    <string name="digit0">0</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit1">1</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit2">2</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit3">3</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit4">4</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit5">5</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit6">6</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit7">7</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit8">8</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit9">9</string>
    <!-- Button name on screen to delete the last entered digit or operator -->
    <string name="del">DELETE</string>
    <string name="invoice_title_check">統一發票中獎號碼單</string>
    <string name="invoice_winning_mone_info_8">八位數號碼與上列號碼相同者獎金</string>
    <string name="invoice_winning_mone_info_3">末三碼與上列號碼相同者各得獎金</string>
    <string name="invoice_winning_1000">1千元</string>
    <string name="invoice_winning_4000">4千元</string>
    <string name="invoice_winning_10000">1萬元</string>
    <string name="invoice_winning_40000">4萬元</string>
    <string name="invoice_winning_grand_prize">1000 萬元</string>
    <string name="invoice_winning_top_prize">200 萬元</string>
    <string name="invoice_winning_first_prize">20 萬元</string>
    <string name="invoice_winning_200">2百元</string>
    <string name="setting_auto_refresh">Automatic Refresh</string>
    <string name="setting_auto_refresh_notes">Automatic Refresh Lottery updates</string>
    <string name="setting_touch_vibrate">Vibration</string>
    <string name="setting_touch_vibrate_notes">vibrate while touching screen</string>
    <string name="search_lotto_date">Date:</string>
    <string name="search_lotto_choose_date">Date Pick</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_chinese_calendar">民國</string>
    <string name="string_chinese_year"> 年 </string>
    <string name="string_chinese_month">月</string>
    <string name="string_date_empty_prompt">Please select date first!</string>
    <string name="string_cash_date_title">Cash due date:</string>
    <string name="string_single_draw_prize_title">Prize money per single jackpot</string>
    <string name="string_dollar">NTD</string>
    <string name="lotto_detail_info_no_prize">Prize carry on till next draw</string>
    <string name="number_01">01</string>
    <string name="number_02">02</string>
    <string name="number_03">03</string>
    <string name="number_04">04</string>
    <string name="number_05">05</string>
    <string name="number_06">06</string>
    <string name="number_07">07</string>
    <string name="number_08">08</string>
    <string name="number_09">09</string>
    <string name="number_10">10</string>
    <string name="number_11">11</string>
    <string name="number_12">12</string>
    <string name="number_13">13</string>
    <string name="number_14">14</string>
    <string name="number_15">15</string>
    <string name="number_16">16</string>
    <string name="number_17">17</string>
    <string name="number_18">18</string>
    <string name="number_19">19</string>
    <string name="number_20">20</string>
    <string name="number_21">21</string>
    <string name="number_22">22</string>
    <string name="number_23">23</string>
    <string name="number_24">24</string>
    <string name="number_25">25</string>
    <string name="number_26">26</string>
    <string name="number_27">27</string>
    <string name="number_28">28</string>
    <string name="number_29">29</string>
    <string name="number_30">30</string>
    <string name="number_31">31</string>
    <string name="number_32">32</string>
    <string name="number_33">33</string>
    <string name="number_34">34</string>
    <string name="number_35">35</string>
    <string name="number_36">36</string>
    <string name="number_37">37</string>
    <string name="number_38">38</string>
    <string name="number_39">39</string>
    <string name="number_40">40</string>
    <string name="number_41">41</string>
    <string name="number_42">42</string>
    <string name="number_43">43</string>
    <string name="number_44">44</string>
    <string name="number_45">45</string>
    <string name="number_46">46</string>
    <string name="number_47">47</string>
    <string name="number_48">48</string>
    <string name="number_49">49</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_three_menu_item">ThreeMenuItemActivity</string>

</resources>